--- a/dieterInstructionsV2.html
+++ b/dieterInstructionsV2.html
@@ -315,11 +315,11 @@
               For this study, imagine the following:
             </p>
             <p className="text-gray-700">
-              There are new products of two kinds:
+              In this study, you will encounter 2 different beverages and their associated blood chemicals. For each beverage, you will make decisions in {CONFIG.nRounds} rounds. Think of each round as one day in a week.
             </p>
             <ul className="list-disc list-inside space-y-4 text-gray-600 ml-4">
               <li>
-                <strong className="text-gray-900">New functional beverages.</strong> These are drinks that may or may not have effects on you, such as altering certain blood chemicals. For example:
+                <strong className="text-gray-900">New functional beverages.</strong> These are drinks that may or may not have effects on you, such as altering certain blood chemicals.
                 <div className="grid grid-cols-2 gap-3 mt-3">
                   {EXAMPLES.map((ex, i) => (
                     <div key={i} className="bg-white rounded-lg p-3 flex items-center justify-center gap-2 border border-gray-200 shadow-sm">
@@ -340,9 +340,6 @@
                 </div>
               </li>
             </ul>
-            <p className="text-gray-700 mt-4">
-              You will see 2 different beverages and blood chemicals in this study. For each beverage, you will make decisions in {CONFIG.nRounds} rounds. Think of each round as one day in a week.
-            </p>
           </div>
         </section>,
 
