--- a/dieterInstructionsV2.html
+++ b/dieterInstructionsV2.html
@@ -314,12 +314,15 @@
             <p className="text-gray-700">
               For this study, imagine the following:
             </p>
+            <p className="text-gray-700">
+              There are new products of two kinds:
+            </p>
             <ul className="list-disc list-inside space-y-4 text-gray-600 ml-4">
               <li>
                 <strong className="text-gray-900">New functional beverages.</strong> These are drinks that may or may not have effects on you, such as altering certain blood chemicals.
               </li>
               <li>
-                <strong className="text-gray-900">A new smartphone extension called BioClip</strong> that measures these blood chemicals. These blood chemicals may or may not have some effect on how you feel.
+                <strong className="text-gray-900">A new smartphone extension called BioClip</strong> that measures your blood chemicals. These blood chemicals may or may not have some effect on how you feel.
               </li>
             </ul>
             <p className="text-gray-700">
