--- a/dieterInstructionsV2.html
+++ b/dieterInstructionsV2.html
@@ -326,7 +326,7 @@
               </li>
             </ul>
             <p className="text-gray-700">
-              You will see two different beverages and two blood chemicals in this study. For each beverage, you will make decisions in {CONFIG.nRounds} rounds. Think of each round as one day in a week.
+              You will see two different beverages and two blood chemicals in this study. <strong>Different beverages and chemicals may work in different ways.</strong> For each beverage, you will make decisions in {CONFIG.nRounds} rounds. Think of each round as one day in a week.
             </p>
             <div className="grid grid-cols-2 gap-6 mt-4">
               <div>
